<resources>
    <string name="app_name">ThesisLGD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="totle_name">毕业论文</string>
    <string name="bottom_huihua">会话</string>
    <string name="bottom_xuanti">选题</string>
    <string name="bottom_jindu">进度</string>
    <string name="bottom_more">更多</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="forget">忘记密码</string>
    <string name="relogin">已有账户 登录</string>
    <string name="getsms">获取验证码</string>
    <string name="yanzhengma">验证码</string>

</resources>
